--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<!--添加redis-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
 		<!--添加aop-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
