--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,17 @@ spring:
     hibernate:
       ddl-auto: update
       show-sql: true
+ #redis
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+    pool:
+      max-active: 8
+      max-wait: -1
+      min-idle: 0
+    timeout: 0
+
   #mongodb
   mongodb:
     host: localhost
