--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
 user:
   name: L
   age: 27
+
 spring:
   #http
   http:
@@ -30,7 +31,7 @@ spring:
       show-sql: true
  #redis
   redis:
-    database: 0
+    database: 1
     host: localhost
     port: 6379
     pool:
@@ -38,7 +39,14 @@ spring:
       max-wait: -1
       min-idle: 0
     timeout: 0
-
+ #thymeleaf
+  thymeleaf:
+    mode: HTML5
+    encoding: UTF-8
+    content-type: text/html
+    cache: false
+    suffix: .html
+    prefix: classpath:/templates/
   #mongodb
   mongodb:
     host: localhost
@@ -55,6 +63,10 @@ spring:
       repositories:
         enabled: true
       cluster-name: industry_search
+
+
+
+
 
 
 
