--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			<artifactId>kaptcha</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>proudsmart.private</groupId>
+			<artifactId>taobao-sdk-java</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 
